--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
 
                     	<figure class="details-image">
 
-                        	<img src="images/about.png" alt="" class="img-responsive"/>
+                        	<!--<img src="images/about.png" alt="" class="img-responsive"/>-->
 
                         </figure>
 
