--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
 
                     	<figure class="details-image">
 
-                        	<!--<img src="images/about.png" alt="" class="img-responsive"/>-->
+                        	<img src="https://i0.wp.com/www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_detail/few_off/sian-fkp-37/2022/06_20/sian_hero_01.jpg?ssl=1" alt="" class="img-responsive"/>
 
                         </figure>
 
